# ai-learning

AI Agent Tutorial/: .env  main.py  requirements.txt  tools.py
Asyncio/: coroutine.py  event.py  lock.py  main.py  pyproject.toml  scratchpad.py  semaphore.py
Chat Completion/: main.py
FastAPI/: main.py
First-MCP-Server/: main.py  pyproject.toml
Hugging-face/: test.py
Krish-Learning/Agentic-AI-Workspace/: pyproject.toml
Krish-Learning/Agentic-AI-Workspace/1-Langgraph-Basics/: .env  SimpleGraph.ipynb
Krish-Learning/LangChain2/: 0-1-GettingStarted.ipynb  0-2-SimpleApp.ipynb  0-3-SImpleApp2.ipynb  0-4-SimpleLLM-LCEL.ipynb  1-Dataingestion.ipynb  2-Embeddings.ipynb  app.py  main.py  pyproject.toml  requirements.txt  serve.py  speech.txt
Krish-Learning/LangChain2/chroma_db/: chroma.sqlite3
Krish-Learning/LangChain2/faiss_index/: index.faiss  index.pkl
LangGraphTutorial/: .env  main.py  pyproject.toml
Langgrapg-Learning/: .env  1_simple_graph.ipynb  2_graph_with_conditions.ipynb  3_chatbot.ipynb  4_tools_call.ipynb  5_tools_call_agent.ipynb  6_memory.ipynb  main.py  pyproject.toml
LiteLLM/: compose.yaml  (+3 more)
RAG-YT-Krish/: main.py  pyproject.toml  requirements.txt
RAG-YT-Krish/data/textfiles/: machine_learning_introduction.txt  python_programming_instruction.txt
RAG-YT-Krish/data/vectorstore/487e943d-7246-4dc5-9ae3-58b5fbe99f7a/: index_metadata.pickle
RAG-YT-Krish/data/vectorstore/6bd669c3-996d-4d57-9d34-efba53143c2e/: index_metadata.pickle
RAG-YT-Krish/notepad/: .env  document.ipynb  pdf_loader.ipynb  rag_pipeline.ipynb  rag_pipeline_final.ipynb
(+36 files in other folders)
